Fix JavaFX child lookup in cell selection